feat: request changes

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "tsx src/scripts/seed.ts",
+    "seed-db": "tsx src/scripts/seed-database.ts",
     "electron-dev": "concurrently \"yarn dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-build": "next build && electron-builder",
     "electron-start": "electron ."
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.56.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
